--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@ text-decoration: underline;
             <div class="couple">
                 <div class="person">
                     <div class="profile-img">
-                        <img src="damat.jpg" alt="Damat">
+                        <img src="damat.jpeg" alt="Damat">
                     </div>
                     <h3>Ali Fırat Çobanoğlu</h3>
                 </div>
