--- a/en-index.html
+++ b/en-index.html
@@ -823,7 +823,7 @@
                 <div class="couple">
                     <div class="person">
                         <div class="profile-img">
-                            <img src="damat.jpg" alt="Groom">
+                            <img src="damat.jpeg" alt="Groom">
                         </div>
                         <h3>Ali Fırat Çobanoğlu</h3>
                     </div>
