--- a/en-index.html
+++ b/en-index.html
@@ -823,7 +823,7 @@
                 <div class="couple">
                     <div class="person">
                         <div class="profile-img">
-                           <img src="damat.jpeg" alt="Groom">
+                            <img src="damat.jpg" alt="Groom">
                         </div>
                         <h3>Ali Fırat Çobanoğlu</h3>
                     </div>
@@ -967,6 +967,9 @@
                           
                             <!-- Submit butonu -->
                             <button type="submit" class="submit-btn">Submit</button>
+                            <br>
+<br>
+<br>
 
                             <input type="hidden" name="_captcha" value="false">
 <input type="hidden" name="_template" value="box">
