--- a/en-index.html
+++ b/en-index.html
@@ -919,7 +919,7 @@
                             <span class="event-icon">🍸</span>
                             <a href="https://maps.app.goo.gl/fjJkQUaZ5Jgn13hy5" target="_blank" class="map-link">
                                 Sarar Boutique Hotel<br>
-                                Sümer Neighborhood, Basın Şehitleri Avenue<br>No:341/G, 26140 <br>
+                                Sümer Neighborhood <br> Basın Şehitleri Avenue<br>No:341/G, 26140 <br>
                                 Inside Sarar Basma Factory
                             </a>
                           </div>
