--- a/en-index.html
+++ b/en-index.html
@@ -923,6 +923,7 @@
                                 Inside Sarar Basma Factory
                             </a>
                           </div>
+                          <p style="font-size: small;">*If you’re considering staying at the hotel, there’s a special rate for our guests: 1,500₺ per night for a triple room. To receive the discount, just mention that you’re a guest of the wedding couple when booking.</p>
                     </div>
                 </div>
             </div>
