--- a/index.html
+++ b/index.html
@@ -920,6 +920,7 @@
                           Sarar Basma Fabrikası içi
                         </a>
                       </div>
+                      <p style="font-size: small;">* Otelde konaklamayı düşünüyorsanız, misafirlerimiz için 3 kişilik odalar gecelik 1500₺. Rezervasyon sırasında indirimli fiyattan yararlanmak için ‘düğün çiftinin misafiriyim’ demeyi unutmayın.</p>
                 </div>
             </div>
         </div>
